--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "@types/react-dom": "18.2.8",
     "@vercel/analytics": "^0.1.11",
     "@vercel/og": "^0.0.26",
+    "@vercel/postgres": "^0.9.0",
     "classnames": "^2.3.2",
     "clsx": "^2.0.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "focus-trap-react": "^10.2.2",
-    "framer-motion": "^8.5.5",
+    "framer-motion": "^11.2.12",
     "lucide-react": "0.105.0-alpha.4",
+    "marked": "^13.0.1",
     "ms": "^2.1.3",
     "next": "14.3.0-canary.57",
     "next-auth": "^4.22.1",
